# finite-difference-option-pricing

./: .gitignore  CMakeLists.txt  README.md  plot_option_pricing_surface.py
.github/workflows/: ci.yml
include/: euler_explicit_scheme.h  fdm.h  option.h  payoff.h  pde.h  thread_pool.h
src/: main.cpp
tests/: test_boundary.cpp  test_fdm.cpp  test_payoff.cpp
